Bug 171369 - activate previous tab setting is broken
Summary: activate previous tab setting is broken
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdeui (other bugs)
Version First Reported In: 4.1
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
: 177218 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-09-20 11:14 UTC by Anders Lund
Modified: 2009-02-19 13:35 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anders Lund 2008-09-20 11:14:07 UTC
Version:           4.1.1 (KDE 4.1.1) (using 4.1.1 (KDE 4.1.1), Kubuntu packages)
Compiler:          gcc
OS:                Linux (x86_64) release 2.6.24-16-generic

Konuqeror offers the excellent feature of actiating the previous tab when the current one is closed, but in kde 4 this does not work. Obiously it did in kde 3 ;)
Comment 1 Eduardo Robles Elvira 2008-09-24 01:08:25 UTC
I've inspected the code and this seems to be a regression in KTabWidget & KTabBar. Previously QTabBar had a tabList() which was use to store the list of previously activated tabs, but now that is missing so the setting "Activate Previous Tab" is simply not implemented in KTabBar.

I wonder if implement a QList<int> of tab indexes in QTabBar is what we should do, or in the other hand have a QList<QWidget*> in QTabWidget. Anyway this is not exactly a Konqueror bug but a kdeui regression from KDE 3.
Comment 2 Dexter Magnific 2008-10-28 10:43:14 UTC
Confirmed in 4.1.2 on gentoo.
Comment 3 Jonathan Thomas 2008-12-07 14:47:04 UTC
Seems to work in KDE 4.1.80. (Though it didn't for me in KDE 4.1.3)
Comment 4 Dotan Cohen 2008-12-08 13:38:41 UTC
*** Bug 177218 has been marked as a duplicate of this bug. ***
Comment 5 Dotan Cohen 2008-12-13 16:21:01 UTC
Confirmed in Konqueror 4.1.85 KDE 4.2 Beta 2. Konqueror ignores the "Activate previous used tab when closing the current tab" option. Steps to reproduce:
1) Go to any website
2) Open three links in new tabs (middle mouse button)
3) Click on second third tab (should be the second link that you just opened)
4) Close the tab

I would expect the user to be returned to the first tab, as that was the previous used tab. However, Konqueror brings the user to the last tab. 
Comment 6 Jonathan Thomas 2009-02-17 15:03:20 UTC
You do have to quit before the setting will take effect, but it does work.
Comment 7 Anders Lund 2009-02-19 12:55:29 UTC
Jonathan, This appears to be the case now (wasn't when I filed the problem).
Comment 8 Jonathan Thomas 2009-02-19 13:35:43 UTC
Yes, I know. :)
That comment was directed more towards Dotan Cohen.