Regression bugfix: Now activate previous tab works again in ktabwidget.

BUG:171369


svn path=/trunk/KDE/kdelibs/; revision=866556